--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -4,7 +4,7 @@ body {
   padding: 0;
   height: 100%;
   width: 100%;
-  background: url('/assets/images/login_bg.jpg') no-repeat center;
+  background: url("/assets/images/login_bg.jpg") no-repeat center;
   background-size: cover;
 }
 
@@ -14,13 +14,13 @@ body {
   position: absolute;
   left: 50%;
   top: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
   background-color: #fff;
 }
 
 .title-box {
   height: 60px;
-  background: url('/assets/images/login_title.png') no-repeat center;
+  background: url("/assets/images/login_title.png") no-repeat center;
 }
 
 .reg-box {
@@ -44,6 +44,9 @@ body {
   position: relative;
 }
 
+.layui-form-item a {
+  text-align: center;
+}
 .layui-icon {
   position: absolute;
   left: 10px;
@@ -51,5 +54,5 @@ body {
 }
 
 .layui-input {
-  padding-left: 32px;
+  padding-left: 32px !important;
 }
